--- a/src/refactored-clean.ipynb
+++ b/src/refactored-clean.ipynb
@@ -2341,6 +2341,7 @@
     "    joblib.dump(bundle, \"model/calibrated_xgboost_final.pkl\")\n",
     "\n",
     "    # 2. Save feature column order — API must feed columns in exactly this order\n",
+    "\n",
     "    feature_names = list(X_train.columns)\n",
     "    with open(\"model/feature_names.json\", \"w\") as f:\n",
     "        json.dump(feature_names, f)\n",
@@ -2348,6 +2349,29 @@
     "    print(f\"Saved bundle with keys: {list(bundle.keys())}\")\n",
     "    print(f\"Feature order ({len(feature_names)} cols): {feature_names}\")\n",
     "    print(f\"Threshold: {threshold}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Production wrapper\n",
+    "class CalibratedXGBoost:\n",
+    "    def __init__(self, xgb_model, calibrator):\n",
+    "        self.xgb_model = xgb_model\n",
+    "        self.calibrator = calibrator\n",
+    "    \n",
+    "    def predict_proba(self, X):\n",
+    "        xgb_proba = self.xgb_model.predict_proba(X)[:, 1]\n",
+    "        return np.column_stack([\n",
+    "            1 - self.calibrator.predict(xgb_proba),  # P(No Claim)\n",
+    "            self.calibrator.predict(xgb_proba)       # P(Claim)\n",
+    "        ])\n",
+    "    \n",
+    "    def predict(self, X, threshold=0.549):  # Your optimal threshold\n",
+    "        return (self.predict_proba(X)[:, 1] >= threshold).astype(int)"
    ]
   },
   {
@@ -2429,7 +2453,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_xgboost_diagnostics(xgb_model, X_train, y_train, X_val, y_val)"
+    "calibrator.fit(train_proba, y_train)\n",
+    "\n",
+    "# Create production model\n",
+    "production_model = CalibratedXGBoost(xgb_model, calibrator)"
    ]
   },
   {
@@ -2438,21 +2465,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_threshold_analysis(production_model, X_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_learning_curves(\n",
-    "    xgb_model,      # Your trained XGBoost model\n",
-    "    X_train,        # Your training features\n",
-    "    y_train,        # Your training labels\n",
-    "    cv=5            # 5-fold cross-validation (default)\n",
-    ")"
+    "# Tests ALL methods, picks BEST\n",
+    "final_calibrator, y_calib_best, results = complete_calibration_pipeline(\n",
+    "    xgb_model, X_train, y_train, X_test, y_test\n",
+    ")\n",
+    "\n",
+    "print(\"\\\\nBEST METHOD:\", list(results.keys())[list(results.values()).index(min(results.values()))])\n",
+    "print(\"Brier improvement:\", (1 - min(results.values())/0.1196)*100, \"%\")\n"
    ]
   },
   {
@@ -2476,15 +2495,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plot_xgboost_diagnostics(xgb_model, X_train, y_train, X_val, y_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_threshold_analysis(production_model, X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_learning_curves(\n",
+    "    xgb_model,    \n",
+    "    X_train,        \n",
+    "    y_train,        \n",
+    "    cv=5            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Save everything in ONE file\n",
     "joblib.dump({\n",
     "    'xgb_model': xgb_model,\n",
     "    'calibrator': calibrator,\n",
     "    'threshold': 0.549,\n",
     "    'production_model': production_model\n",
-    "}, 'calibrated_xgboost_final.pkl')\n",
-    "\n",
-    "print(\"✅ SAVED: calibrated_xgboost_final.pkl\")\n"
+    "}, 'calibrated_xgboost_final.pkl')"
    ]
   },
   {
@@ -2504,43 +2552,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tests ALL methods, picks BEST automatically\n",
-    "final_calibrator, y_calib_best, results = complete_calibration_pipeline(\n",
-    "    xgb_model, X_train, y_train, X_test, y_test\n",
-    ")\n",
-    "\n",
-    "print(\"\\\\nBEST METHOD:\", list(results.keys())[list(results.values()).index(min(results.values()))])\n",
-    "print(\"Brier improvement:\", (1 - min(results.values())/0.1196)*100, \"%\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "calibrator = IsotonicRegression(out_of_bounds='clip')\n",
-    "train_proba = xgb_model.predict_proba(X_train)[:, 1]\n",
-    "calibrator.fit(train_proba, y_train)\n",
-    "\n",
-    "# Production wrapper (handles everything automatically)\n",
-    "class CalibratedXGBoost:\n",
-    "    def __init__(self, xgb_model, calibrator):\n",
-    "        self.xgb_model = xgb_model\n",
-    "        self.calibrator = calibrator\n",
-    "    \n",
-    "    def predict_proba(self, X):\n",
-    "        xgb_proba = self.xgb_model.predict_proba(X)[:, 1]\n",
-    "        return np.column_stack([\n",
-    "            1 - self.calibrator.predict(xgb_proba),  # P(No Claim)\n",
-    "            self.calibrator.predict(xgb_proba)       # P(Claim)\n",
-    "        ])\n",
-    "    \n",
-    "    def predict(self, X, threshold=0.549):  # Your optimal threshold\n",
-    "        return (self.predict_proba(X)[:, 1] >= threshold).astype(int)\n",
-    "\n",
-    "# Create production model\n",
-    "production_model = CalibratedXGBoost(xgb_model, calibrator)"
+    "train_proba = xgb_model.predict_proba(X_train)[:, 1]\n"
    ]
   },
   {
@@ -2658,20 +2671,6 @@
     "    X_train=X_train\n",
     ")\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
